speedtest-tracker-1/main_manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest-tracker-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: speedtest-tracker-1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: speedtest-tracker-1
    spec:
      dnsPolicy: None
      dnsConfig:
        nameservers:
          - 172.16.16.5
          - 8.8.8.8
        searches:
          - speedtest-tracker-1.svc.cluster.local
        options:
          - name: ndots
            value: "5"
      containers:
        - name: speedtest-tracker-1
          image: lscr.io/linuxserver/speedtest-tracker:latest
          resources:
            limits:
              memory: 512Mi
              cpu: "400m"
            requests:
              memory: 256Mi
              cpu: "200m"
          volumeMounts:
            - mountPath: /config
              name: speedtest-tracker-1
      volumes:
        - name: speedtest-tracker-1
          persistentVolumeClaim:
            claimName: speedtest-tracker-1
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: speedtest-tracker-1
  name: speedtest-tracker-1
spec:
  ports:
    - port: 80
  selector:
    app.kubernetes.io/name: speedtest-tracker-1
  type: ClusterIP
