speedtest-tracker-1/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: speedtest-tracker-1
  namespace: speedtest-tracker-1
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`speedtest.pimonlab.xyz`)
      priority: 10
      services:
        - name: speedtest-tracker-1
          namespace: speedtest-tracker-1
          port: 80
  tls:
    secretName: speedtest-tracker-1-ts-secret
